--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ nav{
 }
 .thumb3{
     display: flex;
+    background: #efefef;
     margin: 20px;
     align-items: center;
     border-radius: 6px;
